rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__unexpected_noop.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (unexpected_noop),\nr###\"\n    if( ! version || version == '' ) return;\n    \"###).into_iter().map(|\nstmt | stmt.to_string()).collect :: < Vec < _ >> ().join(\"\\n\")"
---
if (((!version) || (version == ''))) {
  return;
}
