rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__var_assignment.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests :: parse_ok :: < Statement >\n(stringify! (var_assignment), \"x = 3;\")"
---
x = 3;
