rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__variable_assignment_operator.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (variable_assignment_operator),\n\"a++; a--; a[1]++; a[1]--;\")"
---
[
    ExprStmt(
        Unary(
            Unary {
                op: Postfix(
                    PlusPlus,
                ),
                rhs: Atom(
                    Ident(
                        Ident(
                            "a",
                        ),
                    ),
                ),
            },
        ),
    ),
    ExprStmt(
        Unary(
            Unary {
                op: Postfix(
                    MinusMinus,
                ),
                rhs: Atom(
                    Ident(
                        Ident(
                            "a",
                        ),
                    ),
                ),
            },
        ),
    ),
    ExprStmt(
        Unary(
            Unary {
                op: Postfix(
                    PlusPlus,
                ),
                rhs: Atom(
                    ArrayAccess(
                        ArrayAccess {
                            index_expr: Atom(
                                Literal(
                                    Number(
                                        1,
                                    ),
                                ),
                            ),
                            ident: Ident(
                                "a",
                            ),
                        },
                    ),
                ),
            },
        ),
    ),
    ExprStmt(
        Unary(
            Unary {
                op: Postfix(
                    MinusMinus,
                ),
                rhs: Atom(
                    ArrayAccess(
                        ArrayAccess {
                            index_expr: Atom(
                                Literal(
                                    Number(
                                        1,
                                    ),
                                ),
                            ),
                            ident: Ident(
                                "a",
                            ),
                        },
                    ),
                ),
            },
        ),
    ),
]
