rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__while_loop_block.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (while_loop_block), \"while (a) { b; d = 3; }\")"
---
[
    While(
        While {
            condition: Atom(
                Ident(
                    Ident(
                        "a",
                    ),
                ),
            ),
            block: Block {
                items: [
                    ExprStmt(
                        Atom(
                            Ident(
                                Ident(
                                    "b",
                                ),
                            ),
                        ),
                    ),
                    Assignment(
                        Assignment {
                            lhs: PlaceExpr {
                                ident: Ident(
                                    "d",
                                ),
                                array_accesses: [],
                            },
                            op: Equal,
                            rhs: Atom(
                                Literal(
                                    Number(
                                        3,
                                    ),
                                ),
                            ),
                        },
                    ),
                ],
            },
        },
    ),
]
