rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__while_loop_single_stmt.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (while_loop_single_stmt), \"while (a) b = 3;\")"
---
[
    While(
        While {
            condition: Atom(
                Ident(
                    Ident(
                        "a",
                    ),
                ),
            ),
            block: Block {
                items: [
                    Assignment(
                        Assignment {
                            lhs: PlaceExpr {
                                ident: Ident(
                                    "b",
                                ),
                                array_accesses: [],
                            },
                            operator: Equal,
                            rhs: Atom(
                                Literal(
                                    Number(
                                        3,
                                    ),
                                ),
                            ),
                        },
                    ),
                ],
            },
        },
    ),
]
