rust/src/nasl/syntax/parser/snapshots/scannerlib__nasl__syntax__parser__tests__wonderful_x_operator.snap
---
source: src/nasl/syntax/parser/tests.rs
expression: "crate :: nasl :: syntax :: parser :: tests ::\nparse_program_ok(stringify! (wonderful_x_operator),\n\"send_packet( udp, pcap_active:FALSE ) x 200;\")"
---
[
    ExprStmt(
        Atom(
            FnCall(
                FnCall {
                    fn_expr: Atom(
                        Ident(
                            Ident(
                                "send_packet",
                            ),
                        ),
                    ),
                    args: CommaSeparated {
                        items: [
                            Anonymous(
                                AnonymousFnArg {
                                    expr: Atom(
                                        Ident(
                                            Ident(
                                                "udp",
                                            ),
                                        ),
                                    ),
                                },
                            ),
                            Named(
                                NamedFnArg {
                                    ident: Ident(
                                        "pcap_active",
                                    ),
                                    expr: Atom(
                                        Literal(
                                            Boolean(
                                                false,
                                            ),
                                        ),
                                    ),
                                },
                            ),
                        ],
                        delimiter: Paren,
                    },
                    num_repeats: Some(
                        Atom(
                            Literal(
                                Number(
                                    200,
                                ),
                            ),
                        ),
                    ),
                },
            ),
        ),
    ),
]
